<resources>
    <string name="app_name">Instagram Curate</string>
    <string name="notification_channel_sync_name">Sync Notifications</string>
    <string name="notification_channel_sync_description">Notifications related to media sync progress</string>
    <string name="notification_sync_hashtag">Syncing #%1$s</string>

    <string name="add">Add</string>
    <string name="add_search">Add A Search</string>
    <string name="delete">Delete</string>
    <string name="delete_question">Delete %1$s?</string>
    <string name="search_query">Search Query</string>
    <string name="search_type">Search Type:</string>
    <string name="hashtag">Hashtag</string>
    <string name="person">Person</string>
    <string name="error_input">Can only contain letters, numbers, periods, and underscores.</string>
    <string name="perform_ml">Perform Image Label Detection</string>

    <string name="details">Details</string>
    <string name="labels">Labels</string>
    <string name="filter">Filter</string>
    <string name="filter_videos">Show Videos Only</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="apply">Apply</string>
    <string name="reverse_order">Reverse Order</string>
</resources>