<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/add_search"
        android:textAppearance="?attr/textAppearanceHeadline6" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_query_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_query"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_query"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_type" />

    <RadioGroup
        android:id="@+id/search_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">
        <RadioButton
            android:id="@+id/radio_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/person" />
        <RadioButton
            android:id="@+id/radio_hashtag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hashtag" />
    </RadioGroup>
    
    <CheckBox
        android:id="@+id/perform_ml"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perform_ml" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/add" />

</LinearLayout>